# regret-minimizing-agents

./: .gitignore  AGENTS.md  README.md  agents.py  app.py  plot.py  pyproject.toml  streamlit_app.py  test.py
src/: plots.py
src/agents/: base.py  buyer.py  seller.py  test.py
src/auctions/: __init__.py
